# d2ilite

./: .gitignore  AGENTS.md  README.md  app.py  build_exe.bat  config.py  downloader.py  excel_reader.py  legacy_downloader_gui.py  llm_client.py  metadata_manager.py  metadata_writer.py  queue_manager.py  register_windows_file_assoc.ps1  requirements.txt  text_parser.py  titi_metadata_schema.py  启动 D2I Lite.bat
desktop-next/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop-next/src-tauri/: Cargo.toml  tauri.conf.json
desktop-next/src-tauri/src/: lib.rs  main.rs
docs/: AI单图动作接口规划_2026-06-26.md  TITI元数据规范_v2.md  cross_machine_handoff_2026-03-04.md  cross_machine_handoff_2026-03-06.md  d2ilite_iteration_backlog_2026-03-09.md  desktop_bridge_contract_2026-03-04.md  desktop_next_bootstrap_2026-03-04.md  desktop_next_cutover_plan_2026-03-10.md  desktop_next_rewrite_baseline_2026-03-09.md  phase0_refactor_status_2026-03-04.md  public_scraper_iteration_2026-02-27.md  rewrite_blueprint_2026-03-09.md  tauri_modernization_checklist_2026-03-04.md  template_validation_imech_people_2026-03-01.md  加名字白条功能规格_2026-06-26.md  当前图片动作线接手说明_2026-06-26.md  抓取页面与模板生成规范.md  模板生成与使用SOP.md
scraper/: README.md  config.example.json  config.mps.qingming2021.json  config.template.generic.json  config.tiantonglaw.team.json  config.wenming.9thmd.llm.sample.json  config.wenming.9thmd.safe.run.json  llm_enricher.py  public_profile_spider.py  run_public_scraper.py  run_scheduler.py
scripts/: audit_fix_metadata_fields.py  backfill_wenming_full_story.py  (+14 more)
(+64 files in other folders)
